# hans

./: .gitignore  AUTHORS  LICENSE.md  README.md  conf.html  genindex.html  hans.cli.html  hans.html  hans.models.html  hans.multiscale.html  hans.special.html  index.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
_sources/: hans.cli.rst.txt  hans.models.rst.txt  index.rst.txt
cli/: animate1D.py  animate2D.py  animate2d.py  conf_to_yml.py  generate_roughness.py  plot1D_evolution.py  plot1D_height.py  plot1D_last.py  plot2D_height.py  plot2D_last.py  plot_scalar.py  read_config.py
commandline/: animate2D_field.py  conf_to_yml.py  plot1D_anytime.py  plot1D_evolution.py  plot1D_last.py  plot1D_mean_var.py  plot_scalar.py  print_ACF.py  print_variance.py  read_config.py
config/: couette.yaml  inclined.yaml  journal.yaml  poiseuille.yaml  si-units.yaml  stable.yaml
doc/: conf.py  hans.analytic.rst  hans.models.rst  hans.multiscale.rst  hans.rst  hans.special.rst  index.rst  modules.rst  readme.rst
eos/: eos.py
examples/: channel1D_DH.ipynb  channel1D_DH.yaml  channel1D_incomp.yaml  channel_inf_DH.yaml  channel_slip.yaml  flat-channel_DH.ipynb  inclined-slider_DH.ipynb  jb_inf_DH.yaml  jb_inf_stiffDH.yaml  journal-bearing.yaml  journal-bearing_DH.ipynb  journal-bearing_incomp.ipynb  journal-bearing_incomp.yaml  journal-bearing_stiffDH.ipynb  journal1D_DH.ipynb  journal1D_DH.yaml  journal1D_cav.yaml  journal1D_incomp.ipynb  journal1D_incomp.yaml  journal2D_cav.yaml  matplotlibrc  pslider1D_cav.ipynb  pslider1D_cav.yaml  slider1D_DH.ipynb  slider1D_DH.yaml  slider1D_ideal-gas.ipynb  slider1D_ideal-gas.yaml  slider_inf_DH.yaml
examples_elasticity/: elastic_2_parabolic.ipynb  elastic_2_parabolic.yaml  helpers.py
fhl2d/: __main__.py  eos.py  field.py  flux.py  geometry.py  problem.py  run.py  solver.py  stress.py
field/: field.py
flux/: flux.py
geo/: geometry.py
hans/: __init__.py  __main__.py  elasticity.py  field.py  geometry.py  gp.py  input.py  integrate.py  material.py  plottools.py  problem.py  stress.py  tools.py
maintenance/: copyright.py  create_tag.sh  replace_header.py  update_coverage_badge.sh  update_license_headers.sh
output/: animate2D_field.py  animate3D_field.py  get_autocorrelation.py  get_variance.py  get_variance_mpi.py  helper.py  plot1D_anytime.py  plot1D_cut.py  plot1D_cut_converged.py  plot1D_cut_time.py  plot1D_evolution.py  plot1D_last.py  plot1D_scalar.py  plot_scalar.py  plot_simple.py  read_config.py
pylub/: BoundaryCondition.py  __main__.py  bc.py  eos.py  field.py  flux.py  geometry.py  input.py  integrate.py  material.py  plottools.py  problem.py  run.py  solver.py  stress.py  tools.py
run/: run.py
solver/: solver.py
stress/: stress.py
tests/: channel-slip1D_x_incompressible.yaml  channel-slip1D_y_incompressible.yaml  inclined-slider1D_x_ideal-gas.yaml  inclined-slider1D_y_ideal-gas.yaml  journal-bearing1D_x_incompressible.yaml  journal-bearing1D_y_incompressible.yaml  spawner.py  spawner_nomerge.py  test_channel-slip_1D_x.py  test_channel-slip_1D_y.py  test_elasticity.py  test_inclined-slider_1D_x.py  test_inclined-slider_1D_y.py  test_jb_compressible.py  test_jb_incompressible.py  test_journal-bearing_1D_x.py  test_journal-bearing_1D_y.py  test_lmp_import.py  test_lmp_serial.py  test_md_setup.py  test_mpi_spawn.py  test_slider_compressible.py  test_velocity_profiles.py
theory/: index.html  stress_sympy.html
tools/: animate2D_field.py  autocorrelation.py  conf_to_yml.py  get_autocorrelation.py  get_variance.py  helper.py  mean_var.py  plot1D_anytime.py  plot1D_evolution.py  (+8 more)
(+75 files in other folders)
