[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "hans"
description = "Height-Averaged Navier-Stokes (HANS) solver for 2D lubrication problems"
readme = "README.md"
authors = [
    { name = "Hannes Holey", email = "hannes.holey@kit.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
	"matplotlib>=3.2.0",
	"numpy",
	"netCDF4>=1.5.3",
	"PyYAML>=5.3",
	"mpi4py>=3.0",
	"scipy>=1.3",
	"GPy",
	"dtool",
	"dtool-lookup-api"
]

[project.optional-dependencies]
multiscale  = ['lammps']
test = ['pytest', 'coverage>=5.0.3']
doc = ['sphinx', 'sphinx_rtd_theme', 'myst-nb', 'jupytext']

[project.urls]
Source = "https://github.com/hannes-holey/hans"

[project.scripts]
animate1D="hans.cli:animate1D.main"
animate2D="hans.cli:animate2D.main"
generate_roughness="hans.cli:generate_roughness.main"
plot1D_evolution="hans.cli:plot1D_evolution.main"
plot1D_height = "hans.cli:plot1D_height.main"
plot1D_last = "hans.cli:plot1D_last.main"
plot2D_height = "hans.cli:plot2D_height.main"
plot2D_last = "hans.cli:plot2D_last.main"
plot_scalar = "hans.cli:plot_scalar.main"
read_config = "hans.cli:read_config.main"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]