[metadata]
name = hans
author = Hannes Holey
author_email=hannes.holey@kit.edu
description = Height-Averaged Navier-Stokes (HANS) solver for 2D lubrication problems
long_description = file: README.md
license = MIT License
classifiers = 
    "Programming Language :: Python :: 3"
    "License :: OSI Approved :: MIT License"
url = http://github.com/hannes-holey/hans

[options]
packages = find:
zip_safe = True
install_requires = 
  matplotlib>=3.2.0
  numpy>=1.18.1
  netCDF4>=1.5.3
  PyYAML>=5.3
  mpi4py>=3.0
  pytest>=4
  scipy>=1.3
python_requires = >=3.6
tests_require = pytest

[options.entry_points]
console_scripts = 
  animate1D = cli:animate1D.main
  animate2D = cli:animate2D.main
  generate_roughness = cli:generate_roughness.main
  plot1D_evolution = cli:plot1D_evolution.main
  plot1D_height = cli:plot1D_height.main
  plot1D_last = cli:plot1D_last.main
  plot2D_height = cli:plot2D_height.main
  plot2D_last = cli:plot2D_last.main
  plot_scalar = cli:plot_scalar.main
  read_config = cli:read_config.main

  [flake8]
  max_line_length = 140

