[metadata]
name = hans
author = Hannes Holey
author_email=hannes.holey@kit.edu
description = Height-Averaged Navier-Stokes (HANS) solver for 2D lubrication problems
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
url = http://github.com/hannes-holey/hans

[options]
packages = find:
zip_safe = True
install_requires = 
  matplotlib>=3.2.0
  numpy>=1.18.1
  netCDF4>=1.5.3
  PyYAML>=5.3
  mpi4py>=3.0
  pytest>=4
  scipy>=1.3
  GPy==1.10.0
python_requires = >=3.6
tests_require = pytest

[options.entry_points]
console_scripts = 
  animate1D = hans.cli:animate1D.main
  animate2D = hans.cli:animate2D.main
  generate_roughness = hans.cli:generate_roughness.main
  plot1D_evolution = hans.cli:plot1D_evolution.main
  plot1D_height = hans.cli:plot1D_height.main
  plot1D_last = hans.cli:plot1D_last.main
  plot2D_height = hans.cli:plot2D_height.main
  plot2D_last = hans.cli:plot2D_last.main
  plot_scalar = hans.cli:plot_scalar.main
  read_config = hans.cli:read_config.main

[flake8]
max_line_length = 140

